poc-cluster/destinationrule.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: poc-cluster-dr
  namespace: poc-cluster
spec:
  host: poc-cluster
  trafficPolicy:
    tls:
      mode: SIMPLE        # Istio → OpenSearch เป็น HTTPS
      insecureSkipVerify: true   # เพราะ OpenSearch ใช้ self-signed cert
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: poc-cluster-dashboards-dr
  namespace: poc-cluster
spec:
  host: poc-cluster-dashboards
  trafficPolicy:
    tls:
      mode: DISABLE
      insecureSkipVerify: true
